Refactor handling configs in listener